# cpp_utils

./: CLAUDE.md  README.md  config.h.in  meson.build  meson_options.txt
.github/workflows/: CI.yml  tests-with-coverage.yml
docs/api/: README.md  containers.md  cpp_utils_qt.md  endianness.md  io.md  lifetime.md  reflexion.md  serde.md  strings.md  threading.md  trees.md  types.md
docs/superpowers/plans/: 2026-07-15-unified-reflexion-serde-engine.md  2026-07-20-parallel-chunks.md  2026-07-20-tree-traversal-order.md
docs/superpowers/specs/: 2026-07-15-unified-reflexion-serde-engine-design.md  2026-07-20-parallel-chunks-design.md  2026-07-20-tree-traversal-order-design.md
include/: Numeric.h  StringUtils.h  containers.h  containers.hpp  cpp_utils.h  cpp_utils.hpp  deprecate.h  endianness.hpp  trees.h  types_detectors.h  warnings.h
include/containers/: algorithms.hpp  traits.hpp
include/cpp_utils/: Numeric.h  cpp_utils.hpp  deprecate.h  endianness.hpp  meson.build
include/cpp_utils/containers/: algorithms.hpp  nd_shape.hpp  no_init_vector.hpp  nomap.hpp  traits.hpp
include/cpp_utils/cpp_utils_qt/: cpp_utils_qt.hpp
include/cpp_utils/cpp_utils_qt/trees/: traits.hpp
include/cpp_utils/cpp_utils_qt/types/: converters.hpp
include/cpp_utils/endianness/: endianness.hpp
include/cpp_utils/io/: buffer_view.hpp  memory_mapped_file.hpp  owned_buffer.hpp  sequential_writer.hpp
include/cpp_utils/lifetime/: scope_leaving_guards.hpp
include/cpp_utils/reflexion/: reflection.hpp
include/cpp_utils/serde/: context.hpp  deserialization.hpp  runtime_size.hpp  serde.hpp  serialization.hpp  special_fields.hpp
include/cpp_utils/strings/: algorithms.hpp  fuzzy_match.hpp  traits.hpp
include/cpp_utils/threading/: parallel_chunks.hpp  parallel_for.hpp
include/cpp_utils/trees/: algorithms.hpp  node.hpp  traits.hpp
include/cpp_utils/types/: concepts.hpp  detectors.hpp  dtype_dispatch.hpp  integers.hpp  pointers.hpp  qt_types.hpp  strings.hpp  visitor.hpp
include/cpp_utils_qt/trees/: traits.hpp
include/cpp_utils_qt/types/: converters.hpp  pointers.hpp
include/strings/: algorithms.hpp
include/trees/: algorithms.hpp  node.hpp  traits.hpp
include/types/: detectors.hpp  pointers.hpp  qt_types.hpp  strings.hpp  types_detectors.hpp
subprojects/: hedley.wrap
tests/: meson.build
tests/containers/: test_containers.cpp  test_containers_algs.cpp  test_containers_traits.cpp  test_containers_traits_qt.cpp  test_nd_shape.cpp  test_no_init_vector.cpp  test_nomap.cpp
tests/endianness/: test_endianness.cpp
tests/io/: test_buffer_view.cpp  test_memory_mapped_file.cpp  test_owned_buffer.cpp  test_sequential_writer.cpp
tests/lifetime/: test_scope_leaving_guards.cpp
tests/reflexion/: test_count_members.cpp  test_records_loading.cpp
tests/serde/: test_bounded_string.cpp  test_deserialization.cpp  test_dynamic_array.cpp  test_dynamic_array_bytes.cpp  test_dynamic_array_reserve.cpp  test_runtime_size.cpp  test_scaled_field.cpp  test_serialization.cpp  test_serialize_sequential_writer.cpp  test_unused_field.cpp
tests/strings/: test_fuzzy_match.cpp  test_strings_algorithms.cpp
tests/threading/: test_parallel_chunks.cpp  test_parallel_for.cpp
tests/trees/: test_print.cpp  test_print_qt.cpp
tests/types/: concepts.cpp  member_detector.cpp  method_detector.cpp  qt_types_detector.cpp  smart_pointers.cpp  test_dtype_dispatch.cpp  test_visitor.cpp  type_detector.cpp
